# lightgraph

./: .gitignore  EDGELIST_IMPLEMENTATION.md  LICENSE  README.md  TESTING.md  esbuild.config.js  lightgraph.js  package-lock.json  package.json  test_standalone.html
R/: DESCRIPTION  LICENSE  NAMESPACE  README.md
benchmark/: BENCHMARK_REPORT.md  README.md  analysis.ipynb  analyze_benchmarks.py  api_smoke_test.html  baseline_results.jsonl  benchmark.md  benchmark_generator.py  benchmark_results.jsonl  benchmark_server.py  benchmark_summary.csv  benchmark_template.html  benchmark_template_v2.html  cs_cose_benchmark_results.jsonl  cs_fcose_benchmark_results.jsonl  density_smoke_test.html  dpi_smoke_test.html  gen_pages.py  gen_pages_networkd3.R  graph_data.py  grid_benchmark_results.jsonl  lg_benchmark_results.jsonl  optimized_results.jsonl  plot_results.py  probe.js  run_baseline.py  (+8 more)
python/: README.md  TESTING_EDGELIST.md  example10_wrapper_height.html  example1_simple.html  example2_weighted.html  example3_dict.html  example4_groups.html  example5_isolated.html  example6_no_isolated.html  example7_social.html  example8_directed.html  example9_large.html  pyproject.toml
python/examples/: comparison_matrix_vs_edgelist.py  edgelist_demo.py
python/lightgraph/: __init__.py  analytics.py  datasets.py  network.py
python/lightgraph/assets/: lightgraph.js
python/lightgraph/data/: football_edges.csv  football_nodes.csv  got.csv  les_mis.csv
python/tests/: __init__.py  quick_test.py  test_analytics.py  test_datasets.py  test_edgelist.py  test_network.py  test_output.html
(+125 files in other folders)
